fixed some spacing alignment

--- a/etch.css
+++ b/etch.css
@@ -8,8 +8,8 @@
 
 .container {
   display: block;
-  width: 832px;
-  height: 832px;
+  width: 800px;
+  height: 800px;
   margin: 0 auto;
   text-align: center;
 }
@@ -17,6 +17,8 @@
 .square {
   float: left;
   /*border: 1px solid #3B3738;*/
+  margin-left: -1px;
+  margin-bottom: -1px;
   border: none;
   background-color: #3B3738;
 }
